# sacad

./: .travis.yml  README.md  freeze.py  pyproject.toml
sacad/: __init__.py  recurse.py
sacad/sources/: __init__.py  albumartexchange.py  amazoncd.py  amazondigital.py
tests/: __init__.py  recurse_test.py
win/: Makefile
